--- a/_posts/2017-10-03-Week2.md
+++ b/_posts/2017-10-03-Week2.md
@@ -5,4 +5,6 @@ title: Week 2
 
 This week I continued my task of working on issues from the Scratch 3.0 LLK github. I focused in on one particular issue(issue #701) which was causing sprites to be dragged even with a right click. I fixed this issue by adding in a check so that whenever the user clicks with a right or middle click, sprites will ignore it. 
 
-After testing this fix with Scratch running locally with my changes, I ran npm test to see if my code was sufficient. After it had passed all tests, I created a branch for this fix and posted a pull request. Unfortunately, my code did not pass the tests ran by Travis once it was uploaded to github, even though it passed those same tests locally on my machine. I am still working on fixing this issue and will commit my changes once these bugs are fixed.  
+After testing this fix with Scratch running locally with my changes, I ran npm test to see if my code was sufficient. After it had passed all tests, I created a branch for this fix and posted a pull request. Unfortunately, my code did not pass the tests ran by Travis once it was uploaded to github, even though it passed those same tests locally on my machine. I am still working on fixing this issue and will commit my changes once these bugs are fixed. 
+
+On Wednesday after our weekly meeting, I worked continued to work on the bugs being caused by my changes and eventually eliminated them. My pull request now passes the Travis tests on github.
