--- a/_posts/2017-10-17-Week4.md
+++ b/_posts/2017-10-17-Week4.md
@@ -3,6 +3,6 @@ layout: post
 title: Week 4
 ---
 
-I started this week out by working on converting the 3D extension for Scratch made by another student into Javascript files that could be loaded in post compile. I am doing this so that it is easier for us to maintain CScratch and keep it up to date with the LLK Scratch 3.0. 
+I started this week out by working on converting the 3D extension for Scratch made by another student into Javascript files that could be loaded in post compile. I am doing this so that it is easier for us to maintain CScratch and keep it up to date with the LLK Scratch 3.0.
 
-I have created a new 3D module for our CScratch-Modules repo and begun to add in the neccesary XML blocks. I also started to create the corresponding functions in the VM for each block. 
+I have created a new 3D module for our CScratch-Modules repo and begun to add in the necessary XML blocks. I also started to create the corresponding functions in the VM for each block.
